test/expected/shellcheck_test_double_equals.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "[" "a" "==" "b" "]"]
[Word
  Unquoted "["
]
[Word
  Unquoted "a"
]
[Word
  Unquoted "=="
]
[Word
  Unquoted "b"
]
[Word
  Unquoted "]"
]
shit: 1:5: warning: == is undefined in POSIX test, use = for string equality.
     1 |  [ a == b ]
       |      ^~ here.
shit: 1:1: error: Builtin '[': Unable to evaluate the test because '==' is a bashism, use = for string equality in POSIX mode.
     1 |  [ a == b ]
       |  ^~~~~~~~~~ here.
